@@ -5360,10 +5360,10 @@ http://furius.ca/beancount/doc/proposal-query
 
   Current functions to be refactored:
 
-    units / inventory            - beancount.core.inventory.Inventory.get_units(), beancount.core.inventory.Inventory.units()
-    units / position             - .units
-    units / posting              - .units
-    cost / inventory             - beancount.core.inventory.Inventory.cost()
+    units / inventory          X - beancount.core.inventory.Inventory.get_units(), beancount.core.inventory.Inventory.units()
+    units / position           X - .units
+    units / posting            X - .units
+    cost / inventory           X - beancount.core.inventory.Inventory.cost()
     cost / position              - beancount.core.position.Position.at_cost(), beancount.core.position.Position.get_cost()
     cost / posting               - beancount.core.interpolate.compute_cost_basis() (list of postings)
     market / inventory           -
