@@ -341,7 +341,7 @@ class TestRealFilter(unittest.TestCase):
                                  ('Assets', '100 USD'),
                                  ('Liabilities:US:Bank', '101 USD')])
         def ge100(ra0):
-            return ra0.balance.get_units('USD').number >= 100
+            return ra0.balance.get_currency_units('USD').number >= 100
         real_copy = realization.filter(real_root, ge100)
         self.assertTrue(real_copy is not None)
         self.assertEqual({'Assets', 'Liabilities:US:Bank'},
@@ -372,7 +372,7 @@ class TestRealFilter(unittest.TestCase):
                                  ('Assets:US', '100 USD'),
                                  ('Assets', '100 USD')])
         def ge100(ra0):
-            return ra0.balance.get_units('USD').number >= 100
+            return ra0.balance.get_currency_units('USD').number >= 100
         real_copy = realization.filter(real_root, ge100)
         self.assertTrue(real_copy is not None)
         self.assertEqual({'Assets:US'},
@@ -391,7 +391,7 @@ class TestRealFilter(unittest.TestCase):
                                  ('Expenses:Food', '10 USD')])
         def even(real_account):
             return (not real_account.balance.is_empty() and
-                    real_account.balance.get_units('NOK').number % 2 == 0)
+                    real_account.balance.get_currency_units('NOK').number % 2 == 0)
         real_even = realization.filter(real_root, even)
         self.assertTrue(all(map(even, realization.iter_children(real_even, True))))
 
