@@ -386,7 +386,7 @@ class TestPadding(cmptest.TestCase):
         for txn_posting in txn_postings:
             if isinstance(txn_posting, data.TxnPosting):
                 position_, _ = pad_balance.add_position(txn_posting.posting)
-            balances.append((type(txn_posting), pad_balance.get_units('USD')))
+            balances.append((type(txn_posting), pad_balance.get_currency_units('USD')))
 
         self.assertEqual(balances, [(data.Open, A('0.00 USD')),
                                     (data.Pad, A('0.00 USD')),
