@@ -170,7 +170,7 @@ def table_of_balances(real_root, operating_currencies, formatter, classes=None):
 
         # FIXME: This little algorithm is inefficient; rewrite it.
         for currency in operating_currencies:
-            units = ccy_dict[currency].get_units(currency)
+            units = ccy_dict[currency].get_currency_units(currency)
             cells.append(formatter.render_number(units.number, units.currency)
                          if units.number != ZERO
                          else '')
